--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "ejs": "2.3.3",
     "express": "4.13.3",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": "0.12.7"
