--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "body-parser": "^1.15.0",
     "ejs": "2.3.3",
     "express": "4.13.3",
     "request": "^2.69.0",
