--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.15.0",
     "ejs": "2.3.3",
     "express": "4.13.3",
+    "nedb": "^1.7.4",
     "request": "^2.69.0",
     "underscore": "^1.8.3"
   },
